@@ -13,7 +13,7 @@
 # See the file "license.terms" for information on usage and redistribution
 # of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 #
-# RCS: @(#) $Id: set-old.test,v 1.17.2.2 2008/07/29 20:14:06 dgp Exp $
+# RCS: @(#) $Id: set-old.test,v 1.17.2.3 2009/06/24 15:18:47 dgp Exp $
 
 if {[lsearch [namespace children] ::tcltest] == -1} {
     package require tcltest
@@ -913,6 +913,7 @@ catch {unset a}
 catch {unset b}
 catch {unset c}
 catch {unset aVaRnAmE}
+catch {rename foo {}}
 
 # cleanup
 ::tcltest::cleanupTests
