@@ -15,7 +15,7 @@
 # See the file "license.terms" for information on usage and redistribution
 # of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 #
-# RCS: @(#) $Id: stringComp.test,v 1.6.4.7 2008/07/29 20:14:06 dgp Exp $
+# RCS: @(#) $Id: stringComp.test,v 1.6.4.8 2009/06/24 15:18:47 dgp Exp $
 
 if {[lsearch [namespace children] ::tcltest] == -1} {
     package require tcltest
@@ -714,5 +714,6 @@ test stringComp-11.54 {string match, failure} {
 ## not yet bc
 
 # cleanup
+catch {rename foo {}}
 ::tcltest::cleanupTests
 return
