@@ -11,7 +11,7 @@
 # See the file "license.terms" for information on usage and redistribution
 # of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 #
-# RCS: @(#) $Id: switch.test,v 1.9.2.11 2008/07/29 20:14:06 dgp Exp $
+# RCS: @(#) $Id: switch.test,v 1.9.2.12 2009/06/24 15:18:47 dgp Exp $
 
 if {[lsearch [namespace children] ::tcltest] == -1} {
     package require tcltest 2
@@ -739,6 +739,7 @@ test switch-14.16 {switch -regexp compilation} {
 } no
 
 # cleanup
+catch {rename foo {}}
 ::tcltest::cleanupTests
 return
 
